corrections and thanks

--- a/rama/index.html
+++ b/rama/index.html
@@ -83,7 +83,7 @@ Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
 </p>
 
 <p>Evde geçireceğimiz ikinci Ramazan mevsimini yine Kuran kelimeleri ile süsleyelim. 
-<a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna</a> katılın,
+<a target=Kuran href="https://groups.google.com/g/okuyun5">Mail grubuna</a> katılın,
 Ramazan boyunca size her gün birkaç ayet hatırlatalım.
 Amacımız, Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.
 Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
