--- a/ders/yaygin.html
+++ b/ders/yaygin.html
@@ -62,7 +62,7 @@ Türkçe kelimelerin ayetlerini seçmek ve linklerini eklemek otomatik yapılama
 <script>
 "use strict";
 const DATA =
-`ٱللَّه	2704	<a name="v=33:38&r={ll~ah">Allah</a> (özel isim)
+`ٱللَّه	2704	<a href="Allah.html">Allah</a> (özel isim)
 قول	1722	Söylemek. <a name="v=81:25&r=qwl">Kavl,</a> söz.
 كون	1390	Olmak. <a name="v=36:82&r=kwn">Kevn.</a> <a name="v=50:41&r=kwn">Mekan.</a>
 ربب	980	<a name="v=55:17&r=rbb">Rabb</a> (cins isim). <a name="v=12:39&r=rbb">Erbâb.</a>
@@ -174,7 +174,7 @@ const DATA =
 رجع	104	Dönmek. <a name="v=86:11&r=rjE">Rücû.</a>
 فضل	104	<a name="v=27:40&r=fDl">Fazl,</a> üstünlük. Erdem.
 صبر	103	<a name="v=103:3&r=Sbr">Sabır.</a>
-ولد	102	Doğurmak. Doğuran. <a name="v=112:3&r=wld">Veled.</a>
+ولد	102	Doğurmak. Doğuran. <a name="v=17:111&r=wld">Veled.</a>
 اذن	102	<a name="v=5:110&r=A*n">İzin</a> vermek/istemek, bildirmek. Kulak.
 شدد	102	<a name="v=33:11&r=$dd">Şedid,</a> şiddetli.
 دين	101	Borç. <a name="v=1:4&r=dyn">Din.</a>`
