--- a/ders/index.html
+++ b/ders/index.html
@@ -26,6 +26,7 @@
   <li><a href="07.html">Kelime türetme</a></li>
   <li><a href="sunum4.2.html">Sunum V4.2</a></li>
   <li><a href="yaygin.html">Sık geçen kelimeler</a></li>
+  <li><a href="Allah.html">Lafza-i Celâl</a></li>
 </ol>
 
 <!-- <p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p> -->
