--- a/ders/yaygin.html
+++ b/ders/yaygin.html
@@ -79,7 +79,7 @@ const DATA =
 ايي	382	<a name="v=30:16&r=Ayy">Ayet.</a>
 سمو	381	<a name="v=6:1&r=smw">Sema.</a> <a name="v=96:1&r=smw">İsim.</a>
 كلل	377	Bütün, hepsi.
-عذب	373	<a name="v=5:115&r=E*b">Azap.</a> Tatlı.
+عذب	373	<a name="v=5:115&r=E*b">Azap.</a> Tatlı (su).
 عمل	360	Yapmak. <a name="v=67:2&r=Eml">Amel.</a>
 جعل	346	Yapmak.
 رحم	339	Acımak. <a name="v=21:107&r=rHm">Rahmet.</a> <a name="v=90:17&r=rHm">Merhamet.</a>
@@ -97,7 +97,7 @@ const DATA =
 عبد	275	Kul. <a name="v=40:60&r=Ebd">İbadet.</a>
 اخذ	273	Almak, tutmak. <a name="v=2:267&r=Ax*">Âhize.</a>
 خلق	261	Yaratmak. <a name="v=17:98&r=xlq">Halk.</a> <a name="v=68:4&r=xlq">Ahlak.</a> 
-وقي	258	Korumak, sakınmak. <a name="v=5:2&r=wqy"><Takva./m>
+وقي	258	Korumak, sakınmak. <a name="v=2:197&r=wqy">Takva.</a>
 اخر	250	Ertelemek. Son, diğer. <a name="v=43:35&r=Axr">Ahiret.</a>
 امر	248	Emretmek. <a name="v=17:85&r=Amr">Emir,</a> iş.
 نوس	241	<a name="v=103:2&r=Ans">İnsan.</a>
@@ -107,7 +107,7 @@ const DATA =
 دعو	212	<a name="v=14:39&r=dEw">Dua.</a> <a name="v=2:186&r=dEw">Davet,</a> çağırmak.
 حكم	210	<a name="v=12:22&r=Hkm">Hüküm,</a> <a name="v=2:269&r=Hkm">hikmet.</a>
 ملك	206	<a name="v=3:26&r=mlk">Mâlik</a> olmak. <a name="v=2:246&r=mlk">Melik.</a> <a name="v=6:8&r=mlk">Melek.</a>
-جنن	201	<a name="v=7:42&r=jnn">Cennet.</a> <a name="v=114:6&r=jnn">Cin.</a>
+جنن	201	<a name="v=7:42&r=jnn">Cennet.</a> <a name="v=114:6&r=jnn">Cin.</a> <a name="v=34:46&r=jnn">Cinnet.</a>
 عند	201	Yanında, katında.
 خير	196	<a name="v=99:7&r=xyr">Hayr.</a> Seçmek.
 نور	194	Aydınlatmak. <a name="v=24:35&r=nwr">Nur. Nar,</a> ateş.
