--- a/ders/yaygin.html
+++ b/ders/yaygin.html
@@ -112,13 +112,13 @@ const DATA =
 عند	201	Yanında, katında.
 خير	196	<a name="v=99:7&r=xyr">Hayr.</a> Seçmek.
 نور	194	Aydınlatmak. <a name="v=24:35&r=nwr">Nur. Nar,</a> ateş.
-حسن	194	Güzel. <a name="v=64:17&r=Hsn">Hasen.</a>
+حسن	194	Güzel. <a name="v=64:17&r=Hsn">Hasen.</a> <a name="v=16:90&r=Hsn">İhsan.</a> 
 ضلل	191	<a name="v=4:44&r=Dll">Dalalet,</a> sapmak.
 سمع	185	Duymak, kulak vermek.
 بني	184	Oğul, çocuk.
 حيي	184	Diriltmek. <a name="v=2:179&r=Hyy">Hayat.</a>
 خرج	182	Çıkmak. <a name="v=6:122&r=xrj">Hariç,</a> <a name="v=71:18&r=xrj">ihraç.</a>
-صلح	180	<a name="v=26:142&r=SlH">Salih</a> (cins ve özel isim)
+صلح	180	<a name="v=4:128&r=SlH">Sulh.</a> <a name="v=26:142&r=SlH">Salih</a> (cins ve özel isim)
 سبل	176	Yol. <a name="v=40:38&r=sbl">Sebil.</a>
 تبع	172	Uymak, <a name="v=2:145&r=tbE">tâbi</a> olmak. <a name="v=14:21&r=tbE">Tebâ.</a> Peşpeşe.
 قتل	170	Öldürmek, savaşmak. <a name="v=5:30&r=qtl">Katl.</a>
@@ -138,11 +138,11 @@ const DATA =
 غير	154	<a name="v=1:7&r=gyr">Gayrı,</a> başka. Değişmek.
 وعد	151	<a name="v=35:5&r=wEd">Vaad.</a>
 رود	148	İrade. Murad. Düzen kurmak.
-بصر	148	Bakmak. <a name="v=6:104&r=bSr">Basiret.</a> Aydınlatan.
+بصر	148	Bakmak. <a name="v=6:104&r=bSr">Basîret/basâir.</a> Aydınlatan.
 اله	147	<a name="v=18:110&r=Alh">İlah,</a> tanrı (cins isim)
 لقي	146	Karşılaşmak.
 دون	144	Aşağı.
-سلم	140	<a name="v=2:128&r=slm">İslam.</a> Barış, <a name="v=39:73&r=slm">selam,</a> <a name="v=33:56&r=slm">teslim.</a>
+سلم	140	<a name="v=3:19&r=slm">İslam,</a> <a name="v=2:128&r=slm">muslim.</a> Barış, <a name="v=39:73&r=slm">selam,</a> <a name="v=33:56&r=slm">teslim.</a>
 نعم	140	<a name="v=93:11&r=nEm">Nimet.</a> Ahır hayvanı.
 مُوسَىٰ	136	<a name="v=10:80&r=muwsaY%60">Musa</a> (özel isim)
 دنو	133	Yakın/aşağı olmak. <a name="v=41:31&r=dnw">Dünya.</a>
@@ -154,7 +154,7 @@ const DATA =
 طوع	129	İsteyerek yapmak. Gücü yetmek.
 عظم	128	<a name="v=24:16&r=EZm">Azim,</a> yüce. Kemik.
 خلف	127	Ardından gelmek. Halef. <a name="v=35:27&r=xlf">Muhtelif.</a>
-اهل	127	Ev halkı.
+اهل	127	<a name="v=98:1&r=Ahl">Kitap ehli.</a> Ev/memleket halkı. <a name="v=74:56&r=Ahl">Hak sahibi.</a> 
 دخل	126	Girmek. <a name="v=5:22&r=dxl">Dahil.</a>
 خوف	124	Korkmak.
 رزق	123	<a name="v=67:21&r=rzq">Rızık.</a> <a name="v=51:58&r=rzq">Rezzak.</a>
