--- a/cuma/rabler.html
+++ b/cuma/rabler.html
@@ -46,9 +46,11 @@
 <tr><td class="tr-caption" style="text-align: center;">
 <a href="https://tr.pinterest.com/pin/112660428156636337/" target="Kuran">tr.pinterest.com/pin/112660428156636337/</a><br /></td></tr></tbody></table>
 <br/> 
-<div>Türkçede <i>lafza-i celal</i> (Allah) ile neredeyse eş-anlamlı kullanılan bu kelimenin ne farkı var? Cevap kolay: Allah bir, rabler çok. <b>Allah</b> özel isim, çoğulu yok, iyelik eki almaz, "Musa'nın Allah'ı" derseniz yanlış olur. <b>Rabb</b> ise cins isim, çoğulu var, her türlü eki kabul eder, "İsa'nın Rabbi" diyebilirsiniz.</div>
+<div>Kitabımızda sıkça geçen <b>Rabb</b> kelimesi çoğunlukla Allah için, birkaç yerde insanlar için kullanılmış. Bu ikinci anlamın bugün dilimizde karşılığı <b>patron</b>. Türkçede <i>lafza-i celal</i> (Allah) ile neredeyse eş-anlamlı kullanılan bu kelimenin, diğerinden ne farkı var? Cevap kolay: Allah bir, rabler çok. <b>Allah</b> özel isim, çoğulu yok, iyelik eki almaz, "Musa'nın Allah'ı" derseniz yanlış olur. <b>Rabb</b> ise cins isim, çoğulu var, her türlü eki kabul eder, "İsa'nın Rabbi" diyebilirsiniz.</div>
 <br/> 
-<div>Kuran'daki Rabb kavramını anlamak için efendi-köle ilişkisine yakından bakmak lazım: Efendi emreder; köle hizmet eder, sonra ücretini alır. Günümüzde bu model, patron-işçi ilişkisi olarak aynen geçerli. Kölelik kalktı ama efendilik devam ediyor. Dünya düzeninin parçası olan bu modelde, geçici bir süre için de olsa, birisi köle diğeri efendi oluyor. Bu anlamda bir patron, <i>rubûbiyet</i> iddia etmiyor ve adil davranıyorsa makbul bir konumdadır. Lakin, sağladığı bazı imkanlar ile, "köle"lerine olumsuz anlamda <i>rubûbiyet</i> iddia eden çok kişi var... Bu nedenle "Rabler çok" diyorum.</div>
+<div>Kuran'daki <b>Rabb</b> kavramını anlamak için köle-efendi ilişkisine yakından bakmak lazım: Efendi emreder; köle hizmet eder, sonra ücretini alır. Günümüzde bu model, işçi-patron ilişkisi olarak aynen geçerli. Kölelik kalktı ama efendilik devam ediyor. Dünya düzeninin parçası olan bu modelde, geçici bir süre için de olsa, birisi köle diğeri efendi oluyor.</div>
+<br/> 
+<div>Rabbimiz, yaratıcılığın ne olduğunu anlayalım diye insanlara yaratma becerisinin kırıntılarını vermiş. Daha zor bir kavram olan <i>rubûbiyeti</i> anlamamız için de köle-efendi, modern çağda işçi-patron ayrımını yapmış. Hepsi dünya imtihanının gereği...</div>
 <br/> 
 <div>Bu kelimeyi en güzel açıklayan ayetleri Yusuf suresinde buldum ve renkli işaretledim. Allah için kullanılanları büyük R ile, cins isim olanları küçük harfle yazdım. Surenin başında Hz Yakup, küçük oğlunun rüyasını şöyle yorumluyor:</div>
 <div><a href="/Kuran/reader.html#v=12:6&r=rbb" target="iqra">12:6</a>
