--- a/ders/yaygin.html
+++ b/ders/yaygin.html
@@ -161,7 +161,7 @@ const DATA =
 بشر	123	Müjde. <a name="v=15:33&r=b$r">Beşer.</a>
 يدي	120	El.
 عزز	119	<a name="v=3:6&r=Ezz">Aziz,</a> üstün.
-امم	119	<a name="v=2:128&r=Amm">Ümmet.</a>. Anne, <a name="v=7:158&r=Amm">ümmi.</a> <a name="v=25:74&r=Amm">İmam,</a> önder.
+امم	119	<a name="v=2:128&r=Amm">Ümmet.</a> Anne, <a name="v=7:158&r=Amm">ümmi.</a> <a name="v=25:74&r=Amm">İmam,</a> önder.
 جزي	118	Karşılık, <a name="v=98:8&r=jzy">ceza.</a>
 ابو	117	Baba, <a name="v=12:99&r=Abw">ebeveyn,</a> ana-baba.
 نهر	113	<a name="v=2:249&r=nhr">Nehir.</a>
@@ -175,7 +175,7 @@ const DATA =
 رجع	104	Dönmek. <a name="v=86:11&r=rjE">Rücû.</a>
 فضل	104	<a name="v=27:40&r=fDl">Fazl,</a> üstünlük. Erdem.
 صبر	103	<a name="v=103:3&r=Sbr">Sabır.</a>
-ولد	102	Doğurmak. Doğuran. <a name="v=17:111&r=wld">Veled.</a>
+ولد	102	Doğurmak. Doğuran, <a name="v=2:233&r=wld">vâlide.</a> <a name="v=17:111&r=wld">Veled.</a>
 اذن	102	<a name="v=5:110&r=A*n">İzin</a> vermek/istemek, bildirmek. Kulak.
 شدد	102	<a name="v=33:11&r=$dd">Şedid,</a> şiddetli.
 دين	101	Borç. <a name="v=1:4&r=dyn">Din.</a>`
