--- a/ders/index.html
+++ b/ders/index.html
@@ -7,15 +7,14 @@
     <meta name="description" content="Words from Quran" />
     <link rel="stylesheet" href="ders.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Iqra Ders</title>
+    <title>Iqra Dersler</title>
   </head>
 
   <body>
 <h2>Giriş</h2>
 
+<h3>Arapça Dersler</h3>
 <p>Arapça’yı Kuran’dan alınmış örneklerle öğrenebilir miyiz?</p>
-
-<p>Dersler:</p>
 <ol>
   <li><a href="01.html">İsimler</a></li>
   <li><a href="02.html">Cümle yapısı</a></li>
@@ -28,8 +27,13 @@
   <li><a href="yaygin.html">Sık geçen kelimeler</a></li>
   <li><a href="Allah.html">Lafza-i Celâl</a></li>
 </ol>
-
-<!-- <p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p> -->
+<h3>Örnek Sayfalar</h3>
+<p>Iqra yazılımını uygulayan web sayfaları</p>
+<ol>
+  <li><a href="../cuma/adalet.html">Adalet ve ibadet</a></li>
+  <li><a href="../cuma/rabler.html">Allah bir, rabler çok</a></li>
+  <li><a href="../cuma/geylani.html">Letters of Geylani</a></li>
+</ol>
 
 <a target="video"
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
