--- a/cuma/adalet.html
+++ b/cuma/adalet.html
@@ -17,8 +17,9 @@
   </head>
 
   <body>
-<h2>Adalet ve ibadet</h2>
 <p class=it>Dün yayınlanan ilginç bir yazıyı, içindeki ayet referanslarını göstermek için buraya alıyorum. Ayetleri Iqra4 yazılımında görmek için metin içindeki linklere dokunun:</p>
+<hr>
+<h2>Adalet ve ibadet</h2>
 
 <div>Adalete dair duyarlılığın yitip gittiği bir topluluğa peygamber olarak gönderilmişti Hz. Şuayb. Kavmi Medyen, ‘hak’tan değil ‘güç’ten yana bir tercihte bulunduğu için adaletsizlik, eşitsizlik ve usulsüzlüğü ‘norm’ haline getirmişti. Bunun en göze çarpan yansıması ise ekonomik alandaydı. Ölçüde ve tartıda haksızlık, Medyen’in alâmet-i farikasıydı. Bu sebeple Hz. Şuayb bir peygamber olarak kavmi Medyen’i uyarırken “<a href="/Kuran/reader.html#v=11:84" target="iqra">Ey kavmim! Allah’a kulluk edin.</a> Sizin O’ndan başka ilâhınız yoktur” dedikten hemen sonra, şunu da diyecekti: “Ölçeği de, teraziyi de eksik tutmayın. (…) Ey kavmim! Ölçerken ve tartarken adaleti yerine getirin.” (bkz. Hûd sûresi)<br /><br />
 Şuayb peygamberin bu daveti, doğru dinî duruşun birbirini tamamlayan iki tutumu beraberce içerdiğinin de ifadesiydi: dikey düzlemde yalnızca Yaratıcıya karşı ibadet, yatay düzlemde yaratılanlara karşı adalet. Verdikleri karşılıktan, Hz. Şuayb’ın davetindeki bu bütünlüğü, kavminin de kavradığı anlaşılıyor. İçlerinden çıkmış, aralarında büyümüş, sakin mizaçlı ve yumuşak huylu olarak tanıdıkları Şuayb, nasıl olmuştur da kavmi içinde herkesin ‘normal’ gördüğü adaletsizliğe, ölçüde ve tartıda usulsüzlüğe herkesi karşısına alma pahasına hayır diyebilmiştir? “Ey Şuayb!” diye sorar kavmi: “Atalarımızın taptıklarını terketmemizi ve mallarımızda dilediğimizi yapmaktan vazgeçmemizi 
@@ -29,7 +30,8 @@ Neredeyse aynı zaman diliminde, Kızıldeniz’in öbür tarafında da hayata d
 Sözün kısası, sûreleri, kıssaları, âyetleri ve emirleriyle Kur’ân, adaleti hayata dair vazgeçilmez bir temel ilke olarak vaz’eder ve ‘adaletli’ bir ‘dindarlığı’ resmeder. Adaletten yana olmak, elbette, her türden zulmün karşısında olmayı da içerir. Öyle ki, bırakın bizzat zulmetmeyi, ‘<a href="/Kuran/reader.html#v=11:113" target="iqra">zulmedenlere meyletmek</a>’ bile cehennem ateşinin kişiye ‘dokunması’ için yeterli bir sebep olarak zikredilir. Velhasıl, hakikat-i halde din, hayattan kopuk, hayata dokunmayan, hayatın içinde yaşananlara dair sözü olmayan soyut bir inanç kümesi değildir. Hele ki, hayatın içindeki yanlışların, zulümlerin ve adaletsizliklerin örtüsü hiç değildir. Bilakis vahyedildiği şekliyle din, hayat içinde yüzyüze gelinen sorunlara değerler ve ilkeler üzerine inşa edilmiş çözümler vaad etmektedir. Bu bağlamda, adalet temel ilkedir. Zulüm ve haksızlık varsa, giderilmesi gerekir.
 </div>
 <p class=it>Yazının sonu <a href="https://serbestiyet.com/featured/zafer-zafer-buyuyen-bir-yenilgi-38917/" target="Kuran">burada</a> - Metin Karabaşoğlu - 11 Ağustos 2020</p>
-<br />
-<!-- <script src="init.js"></script> -->
+<p>Dersler 
+  <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+</p>
 </body>
 </html>
