--- a/cuma/geylani.html
+++ b/cuma/geylani.html
@@ -221,9 +221,10 @@ Praise be to Allah, who has fulfilled His promise to us, and has caused us to in
 • Abdulkadir Akçiçek Türkçeye çevirmiş -- 1966
 (Bu kitabı buldum ama tercüme sorunları var)
 • Louay Fatoohi <a href="https://www.safispub.com/sufism/fifteen-letters-khamsata-ashara-maktuban/" target="Kuran">İngilizceye çevirmiş</a>  -- 2014
-(15 mektuptan 4 örnek yayınlamış)
 </p>
-<!-- <script src="init.js"></script> -->
+<p>Dersler 
+    <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+</p>
 <script>
 const EXP = /\n(.+)\((.+)\)/g
 for (let e of document.querySelectorAll('.pre')) {
