--- a/cuma/rabler.html
+++ b/cuma/rabler.html
@@ -14,14 +14,14 @@
         font-style: italic;
     }
     .rab {
-        /* color: blue; */
-        /* text-decoration: underline; */
         font-weight: bold;
     }
 </style>
   </head>
 
   <body>
+<p class=it>Ayetleri Iqra4 yazılımında görmek için metin içindeki linklere dokunun.</p>
+<hr>
 <h2>Allah bir, rabler çok</h2>
 
 <div>Diyanet Vakfı <a href="https://islamansiklopedisi.org.tr/rab" target="Kuran">İslam Ansiklopedisinden</a> alıntı:</div>
@@ -34,9 +34,8 @@
 <li>Son indirilen surenin son ayeti: <i>"Rabbini hamd ile tesbih et"</i><br />(bir gözlem: bu ayetlerin hepsinde üçüncü kelime Rabb)</li>
 </ul></div>
 <div>Hz Musa'nın Tur Dağında ilk duyduğu hitap bugün bile insanı ürpertiyor:</div>
-<div><a href="/Kuran/reader.html#v=20:12&r=rbb" target="iqra">20:12</a>
-<span class=meal>"Ben şüphesiz senin <span class=rab>Rabbinim</span>; ayağındakileri çıkar; çünkü sen, kutsal bir vadi olan Tuva'dasın."</span>
-<small>(ayeti görmek için numarasına dokunun)</small></div>
+<div><a href="/Kuran/reader.html#v=20:12&r=rbb" target="iqra">
+"Ben şüphesiz senin <span class=rab>Rabbinim</span>; ayağındakileri çıkar; çünkü sen, kutsal bir vadi olan Tuva'dasın."</a></div>
 <br/> 
 <div>Ayrıca, Hz Adem'in pişmanlık duası gibi bir çok dua <b>Rabbennâ</b> hitabıyla başlıyor. Bu kadar önemli bir kelime olmasına rağmen, <i>esmâ-i husnâ</i> içinde sayılmaz. Diğer ilâhî isimlerden farklı olarak <b>er-rabb</b> belirtili hali kullanılmaz, daima iyelik eki ile "Birisinin Rabbi" şeklinde kullanılır.</div>
 <br/> 
@@ -44,7 +43,7 @@
 <tr><td style="text-align: center;">
 <img border="0" src="https://1.bp.blogspot.com/-uVVgQq13cLQ/YT7fCohAMcI/AAAAAAAAcf8/4kACavZ72LklRPEtb2GAc5Y-dy-Dx47vACPcBGAYYCw/w400-h361/1eb5c647c17ba6de281bc43ceec1d609.jpg" width="400" /></td></tr>
 <tr><td class="tr-caption" style="text-align: center;">
-<a href="https://tr.pinterest.com/pin/112660428156636337/" target="Kuran">tr.pinterest.com/pin/112660428156636337/</a><br /></td></tr></tbody></table>
+<a href="https://tr.pinterest.com/pin/112660428156636337/" target="Kuran">Rabb</a><br /></td></tr></tbody></table>
 <br/> 
 <div>Kitabımızda sıkça geçen <b>Rabb</b> kelimesi çoğunlukla Allah için, birkaç yerde insanlar için kullanılmış. Bu ikinci anlamın bugün dilimizde karşılığı <b>patron</b>. Türkçede <i>lafza-i celal</i> (Allah) ile neredeyse eş-anlamlı kullanılan bu kelimenin, diğerinden ne farkı var? Cevap kolay: Allah bir, rabler çok. <b>Allah</b> özel isim, çoğulu yok, iyelik eki almaz, "Musa'nın Allah'ı" derseniz yanlış olur. <b>Rabb</b> ise cins isim, çoğulu var, her türlü eki kabul eder, "İsa'nın Rabbi" diyebilirsiniz.</div>
 <br/> 
@@ -53,33 +52,30 @@
 <div>Rabbimiz, yaratıcılığın ne olduğunu anlayalım diye insanlara yaratma becerisinin kırıntılarını vermiş. Daha zor bir kavram olan <i>rubûbiyeti</i> anlamamız için de köle-efendi, modern çağda işçi-patron ayrımını yapmış. Hepsi dünya imtihanının gereği...</div>
 <br/> 
 <div>Bu kelimeyi en güzel açıklayan ayetleri Yusuf suresinde buldum ve renkli işaretledim. Allah için kullanılanları büyük R ile, cins isim olanları küçük harfle yazdım. Surenin başında Hz Yakup, küçük oğlunun rüyasını şöyle yorumluyor:</div>
-<div><a href="/Kuran/reader.html#v=12:6&r=rbb" target="iqra">12:6</a>
-<span class=meal>"<span class=rab>Rabbin</span> seni böylece rüyandaki gibi seçecek, sana olayları yorumlamayı öğretecek." </span></div>
+<div><a href="/Kuran/reader.html#v=12:6&r=rbb" target="iqra">"<span class=rab>Rabbin</span> seni böylece rüyandaki gibi seçecek, sana olayları yorumlamayı öğretecek." </a></div>
 <br/> 
 <div>Seneler sonra, Hz Yusuf haksız yere hapiste, iki arkadaşının rüyasını yorumlamadan önce bir vaaz ile onları İslam'a hazırlıyor:</div>
-<div><a href="/Kuran/reader.html#v=12:39&r=rbb" target="iqra">12:39</a>
-<span class=meal>"Ayrı ayrı bir sürü <span class=rab>rabler</span> mi daha iyidir, yoksa her şeyden üstün tek Allah mı?" </span></div>
+<div><a href="/Kuran/reader.html#v=12:39&r=rbb" target="iqra">"Ayrı ayrı bir sürü <span class=rab>rabler</span> mi daha iyidir, yoksa her şeyden üstün tek Allah mı?" </a></div>
 <br/> 
 <div>Bu irşaddan sonra, hapis arkadaşları şarapçı ve ekmekçi artık rüyalarının yorumunu duymaya hazırdır:</div>
-<div><a href="/Kuran/reader.html#v=12:41&r=rbb" target="iqra">12:41</a>
-<span class=meal>"Biriniz <span class=rab>rabbine</span> şarap sunacak, diğeri asılacak ve kuşlar başından yiyecek"</span></div>
+<div><a href="/Kuran/reader.html#v=12:41&r=rbb" target="iqra">"Biriniz <span class=rab>rabbine</span> şarap sunacak, diğeri asılacak ve kuşlar başından yiyecek"</a></div>
 <div>Bu ve aşağıdaki iki ayette melik için <i>rabb</i> kelimesi kullanılmış.</div>
 <br/> 
 <div>Lakin, peygamberler de unutabilir. Allah'ı unutmanın sonucu ağır olabiliyor:</div>
-<div><a href="/Kuran/reader.html#v=12:42&r=rbb" target="iqra">12:42</a>
-<span class=meal>İkisinden, kurtulacağını sandığı kimseye Yusuf: "<span class=rab>rabbinin</span> yanında beni an" dedi. Ama Şeytan <span class=rab>Rabbinin</span> zikrini unutturdu ve Yusuf bu yüzden daha birkaç yıl hapiste kaldı.</span></div>
+<div><a href="/Kuran/reader.html#v=12:42&r=rbb" target="iqra">İkisinden, kurtulacağını sandığı kimseye Yusuf: "<span class=rab>rabbinin</span> yanında beni an" dedi. Ama Şeytan <span class=rab>Rabbinin</span> zikrini unutturdu ve Yusuf bu yüzden daha birkaç yıl hapiste kaldı.</a></div>
 <div>(ayetin bu anlamı çoğunluğa uymasa da tefsir kitaplarına geçmiş)</div>
 <br/> 
 <div>Melikin rüyasına hiç kimse yorum yapamayınca, şarapçı hapisteki arkadaşını hatırlar. Yusuf, Mısır'ı kıtlıktan kurtaracak kıymetli yorumunu söyler, ama melikin davetine hemen gitmez:</div>
-<div><a href="/Kuran/reader.html#v=12:50&r=rbb" target="iqra">12:50</a>
-<span class=meal>Yusuf'a elçi gelince, "<span class=rab>rabbine</span> dön, kadınlar niçin ellerini kesmişlerdi bir sor; doğrusu <span class=rab>Rabbim</span> onların hilesini bilir" dedi. </span></div>
+<div><a href="/Kuran/reader.html#v=12:50&r=rbb" target="iqra">Yusuf'a elçi gelince, "<span class=rab>rabbine</span> dön, kadınlar niçin ellerini kesmişlerdi bir sor; doğrusu <span class=rab>Rabbim</span> onların hilesini bilir" dedi. </a></div>
 <div>Hakiki Rabb olan Allah ile dünyevi rablerin farkını bu veciz kıyas ile vurgular.</div>
 <br/> 
 <div>Her şey olup bittikten sonra, Hz Yusuf'un muhteşem duasını okuyoruz:</div>
-<div><a href="/Kuran/reader.html#v=12:101&r=rbb" target="iqra">12:101</a>
-<span class=meal>"<span class=rab>Rabbim</span>! Bana hükümranlık verdin, olayların yorumunu öğrettin. Ey göklerin ve yerin yaradanı! Dünya ve ahirette işlerimi yoluna koyan sensin; canımı müslüman olarak al ve beni salihlere kat."</span></div>
+<div><a href="/Kuran/reader.html#v=12:101&r=rbb" target="iqra">
+"<span class=rab>Rabbim</span>! Bana hükümranlık verdin, olayların yorumunu öğrettin. Ey göklerin ve yerin yaradanı! Dünya ve ahirette işlerimi yoluna koyan sensin; canımı müslüman olarak al ve beni salihlere kat."</a></div>
 <div>Böylece, surenin başındaki yorum aynen hakikat oluyor...</div>
-<br><br>
+<p>Dersler 
+  <button onclick="location.pathname='/Kitap/ders/'">◀</button>
+</p><hr>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/icd7gHE5xyo" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
