--- a/ders/index.html
+++ b/ders/index.html
@@ -27,6 +27,11 @@
   <li><a href="yaygin.html">Sık geçen kelimeler</a></li>
   <li><a href="Allah.html">Lafza-i Celâl</a></li>
 </ol>
+<p><a target="video"
+href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
+Videolar burada</a></p>
+<br>
+
 <h3>Örnek Sayfalar</h3>
 <p>Iqra yazılımını uygulayan web sayfaları</p>
 <ol>
@@ -34,10 +39,6 @@
   <li><a href="../cuma/rabler.html">Allah bir, rabler çok</a></li>
   <li><a href="../cuma/geylani.html">Letters of Geylani</a></li>
 </ol>
-
-<a target="video"
-href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
-Videolar burada</a>
 
   </body>
 </html>
