The Ninth Letter

--- a/cuma/geylani.html
+++ b/cuma/geylani.html
@@ -28,7 +28,6 @@
 
 <h3>The First Letter</h3>
 <div class="pre">My dear friend!
-
 When the lightning bolts of direct perception [shuhud] come flashing forth from the cloud-bank of the grace of:
 
 Allah guides to His Light  whomever He will.   (24:35)
@@ -84,7 +83,6 @@ And when you see, there you  will see a state of bliss and a great domain. (76:2
 
 <h3>The Fifth Letter</h3>
 <div class="pre">My dear friend!
-
 When the suns of our spiritual experiences [ma'arif] rise from their points of ascension in the skies of our innermost beings, the earths of our hearts will be illumined by the light of:
 
 And the earth will shine with  the light of its Lord. (39:69)
@@ -143,7 +141,6 @@ Indeed, he saw one of the  greatest signs of his Lord. (53:18)
 
 <h3>The Sixth Letter</h3>
 <div class="pre">My dear friend!
-
 When the armies of the providential ecstasies [jadhabat] of:
 
 Allah chooses for Himself  whomever He will. (42:13)
@@ -211,6 +208,118 @@ Peace be upon you. Well you  have fared, so enter in, to dwell therein forever. 
 --and they will say: 
 
 Praise be to Allah, who has fulfilled His promise to us, and has caused us to inherit the land, for us to make our  dwelling wherever we will in the Garden [of Paradise]. How splendid is the wage of those  who labor! (39:74)
+
+</div><hr>
+
+<h3>The Ninth Letter</h3>
+<div class="pre">My dear friend!
+You must turn aside from the tempting urges of carnal appetites:
+
+And follow not desire, lest  it lead you astray from Allah's path. (38:26)
+
+--and depart from the dwellings of heedless neglect:
+
+And do not obey someone whose  heart We have made heedless of Our remembrance. (18:28)
+
+--and shun the companionship of hard-hearted folk:
+
+But woe unto those whose  hearts are hardened against the remembrance of Allah.  (18:28)
+
+You must hear, with the ears of your heart, from the summoner of:
+
+Respond to your Lord, before  there comes a day from Allah that cannot be turned back. (42:47)
+
+--the summons of:
+
+Is not the time now ripe for  the hearts of those who believe to be humbled to the Remembrance of Allah? (57:16)
+
+You must wake up from the sleep of delusion:
+
+And do not let the Deceiver  deceive you in regard to Allah. (31:33)
+
+--in response to the admonition:
+
+What, does man suppose that  he will be left to wander aimlessly? (75:36)
+
+You must inquire about the stations of the people of present awareness:
+
+Men whom neither commerce nor  trafficking diverts from the remembrance of Allah. (24:37)
+
+You must journey toward the Ka'ba of the intended destination, on the foot of the head, in the desert of the dedication of:
+
+And devote yourself to Him  with intense devotion. (73:8)
+
+--with the traveling provision of:
+
+Say "Allah!," then  leave them [to their idle prattling]. (6:91)
+
+--and on the riding camel of the commitment of:
+
+And I commit my affair to  Allah. (40:44)
+
+--with the caravan of the truthful people of:
+
+And be with the faithful.  (9:119)
+
+You must pass beyond the dwellings of the vanities of the world of:
+
+We have set all that is on  the earth as an adornment for it. (18:7)
+
+--and keep a safe distance from the perilous roads of the temptations of
+
+Your wealth and your children  are merely a temptation. (64:15)
+
+You must head for the routes that follow the courses of the guidance of:
+
+This is surely a Reminder; so  whoever is willing, let him choose a way to his Lord. (73:19)
+
+--and offer a supplication with the tongue of the urgent need of:
+
+Is it not He who answers the  distressed, when he calls unto Him? (27:62)
+
+--by saying, in humble entreaty and with a sense of personal incapacity:
+
+Guide us in the straight  path. (1:5)
+
+--until the herald of the ancient providential favor of:
+
+As for the friends of Allah,  surely no fear shall be upon them, nor shall they grieve. (10:62)
+
+--comes to meet you with the good tidings of the salutation of:
+
+"Peace!"-such is  the greeting from a Lord All-Compassionate. (36:58)
+
+--and carries you on the packhorse [janiba] of:
+
+Help from Allah and a victory  near at hand. (61:13)
+
+--and invites you to enter the Gardens of the bliss of:
+
+So they returned with grace  and favor from Allah. (3:174)
+
+Then the breeze of the fragrant aroma of loving union [wisal] will blow from every side. The goblets of the drink of loving affection [mahabba] will be passed around by the hands of the cupbearers of the Unseen [suqat al-ghaib], and the bearer of direct witness [mushahid ash-shuhud] will declare:
+
+Behold, this is a reward for  you. And your endeavor [upon earth] has found acceptance. (76:22)
+
+By night, the entertainer of intimate friendship [munadim al-uns] will weave the fascinating tale [samar] of:
+
+And Allah spoke directly to  Moses. (4:164)
+
+He will paint such a vivid picture, in his elaboration of the scenario of:
+
+Then, when his Lord revealed  Himself to the mountain, [He caused it to crumble to dust]. (7:143)
+
+--that his audience will experience, through the optic nerves of their perceptive faculties [nawazir 'uyun al-basa'ir], the delirious raptures [sakarat] of the spiritual states [halat] of:
+
+And Moses fell down swooning.  (7:143)
+
+Then, when they see for themselves the effects of the visions of:
+
+Faces on that day will be  resplendent, looking toward their Lord. (75:22)
+
+--they will confess their personal inadequacy, and they will say, in the spiritual language that needs no ordinary words [bi-lisan al-hal]:
+
+The eyes do not perceive Him,  but He perceives the eyes. (6:103)
 
 </div><hr>
 
