--- a/cuma/geylani.html
+++ b/cuma/geylani.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Words from Quran" />
     <link rel="stylesheet" href="cuma.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Adalet ve ibadet</title>
+    <title>Fifteen Letters</title>
 <style>
     .it {
         font: 17px Times, serif;
@@ -19,11 +19,15 @@
     div a {
         font-family: georgia, serif;
         font-style: italic;
-    }</style>
+    }
+@media screen and (max-width: 380px) {
+    span.wide { display: none; }
+}
+</style>
   </head>
 
   <body>
-<p class=it>Ayetleri Iqra4 yazılımında görmek için metin içindeki linklere dokunun. Mektupların aslı: <a href="http://www.al-baz.com/shaikhabdalqadir/Books_and_Text_of_Wisdom/Khamsatta__Ashara_Maktuban/khamsatta__ashara_maktuban.htm" target="Kuran">Fifteen Letters by 'Abd al-Qadir al-Gilani</a></p>
+<p class=it>Ayetleri Iqra4 yazılımında görmek için metin içindeki linklere dokunun. Kaynak site: <a href="http://www.al-baz.com/shaikhabdalqadir/Books_and_Text_of_Wisdom/Khamsatta__Ashara_Maktuban/khamsatta__ashara_maktuban.htm" target="Kuran">Fifteen Letters by 'Abd al-Qadir al-Gilani</a></p>
 <hr>
 
 <h3>The First Letter</h3>
@@ -279,7 +283,7 @@ Is it not He who answers the  distressed, when he calls unto Him? (27:62)
 
 --by saying, in humble entreaty and with a sense of personal incapacity:
 
-Guide us in the straight  path. (1:5)
+Guide us in the straight  path. (1:6)
 
 --until the herald of the ancient providential favor of:
 
@@ -323,13 +327,12 @@ The eyes do not perceive Him,  but He perceives the eyes. (6:103)
 
 </div><hr>
 
-<p class="pre it">Bu ilginç mektupların bize ulaşana kadar geçtiği yol:
-• Abdulkadir Geylani Farsça yazmış -- 12. yüzyıl
-• Ali Muttaki Arapçaya çevirmiş -- 16. yüzyıl??
-• Süleyman Paşa Osmanlıcaya çevirmiş -- 1859
-• Abdulkadir Akçiçek Türkçeye çevirmiş -- 1966
-(Bu kitabı buldum ama tercüme sorunları var)
-• Louay Fatoohi <a href="https://www.safispub.com/sufism/fifteen-letters-khamsata-ashara-maktuban/" target="Kuran">İngilizceye çevirmiş</a>  -- 2014
+<p class="pre it">Bu mektupların bize ulaşana kadar geçtiği yol:
+• Abdulkadir Geylani Farsça yazmış <span class=wide>-- 12. yüzyıl</span>
+• Ali Muttaki Arapçaya çevirmiş <span class=wide>-- 16. yüzyıl??</span>
+• Süleyman Paşa Osmanlıcaya çevirmiş <span class=wide>-- 1859</span>
+• Abdulkadir Akçiçek Türkçeye çevirmiş <span class=wide>-- 1966</span>
+• Louay Fatoohi <a href="https://www.safispub.com/sufism/fifteen-letters-khamsata-ashara-maktuban/" target="Kuran">İngilizceye çevirmiş</a> <span class=wide>-- 2008</span>
 </p>
 <p>Dersler 
     <button onclick="location.pathname='/Kitap/ders/'">◀</button>
